--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,5 @@
 
   <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
-</body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
